--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,17 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
   <body>
+    <div class="navbar navbar-expand-lg navbar-light bg-light px-3 py-2 d-flex justify-content-between align-items-end" >
+      <p><%= link_to 'Restaurants', restaurants_path, class: "navbar-brand mt-1"%></p>
+      <div class="btn btn-primary">
+        <%= link_to 'Add a restaurant', new_restaurant_path, :class => "btn text-white" %>
+      </div>
+    </div>
+
     <%= yield %>
   </body>
 </html>
